[gd_scene load_steps=23 format=2]

[ext_resource path="res://bg/Background.png" type="Texture" id=1]
[ext_resource path="res://enemsprites/Skel1idle_00001.png" type="Texture" id=2]
[ext_resource path="res://src/enemy_labelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/Quicksand-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://src/battle.gd" type="Script" id=5]
[ext_resource path="res://enemy/Experimental Dead Warrior.tres" type="Resource" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.658824, 0.101961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.521569, 0.0784314, 0.0784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0823529, 0.027451, 0.027451, 0.654902 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://font/Quicksand-Regular.otf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://font/Quicksand-Regular.otf"

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = SubResource( 10 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NodeForCamera/CameraScreen:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 401, 300 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "enemy_death_anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("NodeForCamera/CameraScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 401, 300 ), Vector2( 385, 314 ), Vector2( 414, 286 ), Vector2( 401, 300 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "screen_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("NodeForCamera/CameraScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 401, 300 ), Vector2( 389, 285 ), Vector2( 412, 321 ), Vector2( 385, 314 ), Vector2( 408, 282 ), Vector2( 401, 300 ) ]
}

[node name="TurnbasedRPG" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
enemy = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -61.0
margin_top = -29.0
margin_right = 853.0
margin_bottom = 633.0
texture = ExtResource( 1 )
expand = true

[node name="Enemy" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 70.0
margin_right = 801.0
margin_bottom = 492.0
texture = ExtResource( 2 )
expand = true

[node name="enemycontainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -175.0
margin_right = 279.0
margin_bottom = -18.0

[node name="healthBar" type="ProgressBar" parent="enemycontainer"]
margin_right = 264.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="enemycontainer/healthBar"]
margin_right = 265.0
margin_bottom = 25.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP : 50/100"
align = 1
valign = 1

[node name="NodeForCamera" type="Node2D" parent="."]

[node name="CameraScreen" type="Camera2D" parent="NodeForCamera"]
position = Vector2( 401, 300 )
current = true

[node name="playerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
custom_styles/panel = SubResource( 3 )

[node name="playerData" type="HBoxContainer" parent="playerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
alignment = 1

[node name="Label" type="Label" parent="playerPanel/playerData"]
margin_top = 31.0
margin_right = 390.0
margin_bottom = 69.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "player"
align = 1

[node name="healthBar" type="ProgressBar" parent="playerPanel/playerData"]
margin_left = 394.0
margin_top = 38.0
margin_right = 784.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="playerPanel/playerData/healthBar"]
margin_right = 265.0
margin_bottom = 24.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP : 50/100"
align = 1
valign = 1

[node name="actionPanel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 84.0
custom_styles/panel = SubResource( 3 )

[node name="actionData" type="HBoxContainer" parent="actionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
custom_constants/separation = 6
alignment = 1

[node name="Attack" type="Button" parent="actionPanel/actionData"]
margin_right = 258.0
margin_bottom = 72.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "Attack"

[node name="Defend" type="Button" parent="actionPanel/actionData"]
margin_left = 264.0
margin_right = 523.0
margin_bottom = 72.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "Defend"

[node name="Run" type="Button" parent="actionPanel/actionData"]
margin_left = 529.0
margin_right = 788.0
margin_bottom = 72.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "Run"

[node name="TextBox" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 113.0
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 11 )
text = "A Dead Warrior appeared!"
autowrap = true

[node name="Ticker" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 756.0
margin_top = 55.0
margin_right = 11.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 11 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/enemy_damaged = SubResource( 13 )
anims/enemy_death_anim = SubResource( 16 )
anims/mini_shake = SubResource( 15 )
anims/screen_shake = SubResource( 14 )

[connection signal="pressed" from="actionPanel/actionData/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="actionPanel/actionData/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="actionPanel/actionData/Run" to="." method="_on_Run_pressed"]
